--- a/app.json
+++ b/app.json
@@ -1,15 +1,14 @@
 {
   "expo": {
-    "name": "expo-gatito",
-    "slug": "expo-gatito",
+    "name": "Gatito",
+    "slug": "gatito",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#A050BE"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -19,15 +18,6 @@
     ],
     "ios": {
       "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     }
   }
 }
